assets/style/style.css
body, button {
	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
	line-height: 1.2rem;
}

/* - layout - */
header {
	width: 100vw;
	height: 60px;
	background-color: white;
	border-bottom: 1px solid #ccc;
	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
    z-index: 2000;
}

#header {
	padding: 0.5rem 1rem;
	height: calc(60px - 1rem);
	display: flex;
	justify-content: space-between;
	align-items: center;
	border-bottom: 1px solid #ccc;
}

#header a {
	text-decoration: none;
	font-weight: bold;
	text-transform: uppercase;
	color: #0c57a6;
	font-size: 1.1rem;
}

#header .crediti {
	font-weight: bold;
	color: #0c57a6;
	font-size: 1.1rem;
	cursor: pointer;
}

#credits_container {
	display: none;
}

#credits {
	display: flex;
	justify-content: space-between;
	position: relative;
	background-color: white;
	padding: 2rem 1rem;
	border-bottom: 1px solid #ccc;
	-webkit-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.03);
	-moz-box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.03);
	box-shadow: 0px 10px 5px 0px rgba(0,0,0,0.03);
}

#crediti p {
	line-height: 180%;
}

#credits_button {
	padding: 1.5rem 0;
}

#credits div {
	width: 32%;
}

#main {
	height: calc(100vh - 60px);
	display: flex;
}

/* - map */
#map_container {
	width: 50%;
	z-index: -1;
}

/* - sidebar -  */
.sidebar{
	border-right: 1px solid #ccc;
	overflow-y: scroll;
	position: relative;
}

#sidebars {
	width: 50%;
	display: flex;
	z-index: -1;
}

#sidebarA {
	width: 40%;
	height: 100%;
	background-color: #eee;
}

#sidebarB {
	width: 60%;
	height: 100%;
	background-color: white;
}

#sidebarC {
	display: none;
	padding-top: 5px;
}

#sidebarA_content button {
	background-color: #eee;
	border-bottom: 1px solid #ccc;
	height: 50px;
	cursor: pointer;
	width: 100%;
	text-align: left;
	padding: 0.5rem 1rem;
	text-transform: uppercase;
	color: #0c57a6;
	font-size: 1rem;
	font-weight: bold;
}

/* - sidebar content - */
/*#cover div:nth-child(1) {
	height: 200px;
	width: 800px;
	overflow-y: scroll;*/
/*	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;*/
/*}*/

#cover_image {
	height: 200px;
	overflow-x: scroll;
	display: flex;
}

#cover_image img{
	max-width: 100%;
	margin-right: 2px;
}

#cover_image img:last-child {
	margin-right: 0;
}

#location_header {
	border-bottom: 1px solid #ccc;
/*	height: 50px;*/
	padding: 1.7rem 0.5rem;
}

#content {
	padding: 0.5rem;
	margin-bottom: 3rem;
}

.intro {
	margin-top: 1rem;
}

.place_name {
	font-size: 1.2rem;
	line-height: 120%;
	padding: 0;
	margin: 0;
	font-weight: bold;
	text-transform: uppercase;
	color: #0c57a6;
	font-size: 1rem;
}

.info {
	margin-bottom: 1rem;
}

.parameter {
	font-weight: bold;
	color: #0c57a6;
}

/* - debug - */
.button:hover {
	background-color: lightgray;
}

#test  {
	width: 100px;
	height: 100px;
	background: white;
	margin-top: 2rem;
}

#sidebarA_content .selected {
	background-color: white;
}

/* - responsive - */

@media only screen and (max-width: 1024px) {

	#sidebars {
		width: 60%;
	}

	#map_container{
  		width: 40%;
  	}

  	#credits  {
  		display: block;
  	}

  	#credits div {
  		width: 100%;
  		margin-bottom: 2rem;
  	}

  	#credits div:last-child {
  		margin-bottom: 0;
  	}
}	


@media only screen and (max-width: 768px) {


	header {
		position: fixed;
		top: 0;
	}

	#main {
  		-webkit-flex-direction: column-reverse; 
  		flex-direction: column-reverse;
  		height: auto;
	}

  	#sidebars {
  		width: 100vw;
  		height: auto;
  	}


  	#map_container{
  		height: calc(60vh - 40px - 1rem);
  		width: 100%;
  		top: 60px;
  	}

  	#sidebarA, #sidebarB  {
		display: none;
	}

  	#sidebarC {
  		display: block;
		width: 100%;
		height: auto;
		background-color: white;
		top: 60px;
	}

	#close_sidebarB {
		width: 40px;
		height: 40px;
	    text-align: center;
    	line-height: 40px;
		position: absolute;
		border-radius: 100%;
		top: 20px;
		right: 20px;
		background-color: white;
		border: 1px solid gray;
	}

	.place_name {
		font-size: 1.5rem;
		margin-bottom: 0.5rem;
	}

	.value {
		font-size: 1rem;
	}

}

